# App-WearableSensing

./: .gitignore  CMake.md  CMakeLists.txt  README.md  build-mingw.bat
CLI/: dsi2lsl.c  dsi2lsl.cpp  worker.c
GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
dsi-api-v1.18.2/: ~$outputWorksheet_100K.xlsx
